double scroll issue fix

--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-html, body {
-    overflow-x: hidden;
-}
-
 body {
     background-color: #fff;
     padding: 0px;
@@ -1649,6 +1645,11 @@ h6 {
 }
 
 @media(max-width: 767.98px) {
+
+    html, body {
+        overflow-x: hidden !important;
+    }
+
     [data-disable-parallax-down=md] {
         transform: none !important
     }
